--- a/_config.yml
+++ b/_config.yml
@@ -8,3 +8,5 @@ aux_links:
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
 color_scheme: dark
+exclude: 
+  - README.md
